force-app/main/default/objects/Contact_Role__c/fields/Contact_Role_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Role Email</label>
    <type>Text</type>
</CustomField>