force-app/main/default/objects/Contact_Role__c/fields/Contact_Role_Email_for_Get_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Email_for_Get_Feedback__c</fullName>
    <label>Contact Role Email for Get Feedback</label>
    <type>Email</type>
</CustomField>