force-app/main/default/objects/Contact_Role__c/fields/Contact_Role_First_Name_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_First_Name_Feedback__c</fullName>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Role First Name Feedback</label>
    <type>Text</type>
</CustomField>