force-app/main/default/objects/Contact_Role__c/fields/Milestone_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Contact_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Contact Role</label>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Contact Roles</relationshipLabel>
    <relationshipName>Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>