force-app/main/default/objects/Contact_Role__c/fields/Milestone_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Lookup</label>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Contact Roles (Milestone ID (Lookup))</relationshipLabel>
    <relationshipName>Milestone_ID_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>