force-app/main/default/objects/Contact_Role__c/fields/Project_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Contact_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Contact Role</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Contact Roles</relationshipLabel>
    <relationshipName>Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>