force-app/main/default/objects/Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acclaim Issuer</fullName>
            </value>
            <value>
                <fullName>Account Contact</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Business Contact</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Business Development Lead</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Executive Decision Maker</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Firmex</fullName>
            </value>
            <value>
                <fullName>Firmex - eLearning</fullName>
            </value>
            <value>
                <fullName>GAN Primary Contact</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>License Contact</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Operations Lead</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portal admin</fullName>
            </value>
            <value>
                <fullName>President / Managing Director</fullName>
            </value>
            <value>
                <fullName>Procurement Contact</fullName>
            </value>
            <value>
                <fullName>Survey Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>