force-app/main/default/objects/Contact_Role__c/fields/Survey_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Send_Date__c</fullName>
    <label>Survey Send Date</label>
    <type>Date</type>
</CustomField>