force-app/main/default/objects/Contact_Role__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <formula>Milestone_Lookup__r.pse__Target_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>